@@ -135,6 +135,7 @@ theorems :=
 "CHOICE",CHOICE;
 "CHOICE_DEF",CHOICE_DEF;
 "CHOOSE_SUBSET",CHOOSE_SUBSET;
+"CHOOSE_SUBSET_STRONG",CHOOSE_SUBSET_STRONG;
 "COMMA_DEF",COMMA_DEF;
 "COMPONENT",COMPONENT;
 "COND_ABS",COND_ABS;
